# yadro_task

./: .gitignore  CMakeLists.txt  README.md  prepare.cpp
data/: tape.conf
src/: main.cpp  sorting.hpp  tape.hpp
test/: test.cpp
tmp/: .gitkeep
